# heatFD

./: .gitignore  .travis.yml  Makefile.am  README.md  bootstrap.sh  configure.ac  convergence.py  heat_slurm.sh  sineplot.py
coverage/lcov/: index-sort-f.html  index-sort-l.html  index.html  lcov.info
coverage/lcov/src/: index-sort-f.html  index-sort-l.html  index.html  main.c.func-sort-c.html  main.c.func.html  main.c.gcov.html  utilities.c.func-sort-c.html  utilities.c.func.html  utilities.c.gcov.html
docs/: Makefile.am  proj2-model.aux  proj2-model.out  proj2-model.tex  proj2-model.toc
solns/: 2dplot.h5  2dplot.vtk  vtkplt.py
src/: Makefile.am  main.c  utilities.c  utilities.h
test/: .gitignore  1d2nd.sh  Makefile.am  heatFD.bats  heatFD.sh  main.c  ref1d2nd.h5  utilities.c  utilities.h
